feat: add robots

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JMO's Portfolio</title>
+    <meta name="description" content="백엔드 개발자 전민오 포트폴리오입니다." />
+    <meta property="og:title" content="백엔드 개발자 전민오 포트폴리오" />
+    <meta
+      property="og:description"
+      content="백엔드 개발자 전민오의 포트폴리오 사이트입니다."
+    />
+    <!-- <meta property="og:image" content="이미지U RL" /> -->
   </head>
   <body>
     <div id="root"></div>
